--- a/style.css
+++ b/style.css
@@ -109,6 +109,7 @@ body {
   justify-content: center;
   align-items: center;
   margin: auto;
+  padding : auto 20px;
   flex-wrap: wrap;
 }
 .why-us div {
